# Lattice

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ZH.md  pyproject.toml
.claude/docs/: message-flow.md  modules.md  testing.md
docs/: README.md  architecture.md
docs/modules/: api.md  client.md  core.md  executor.md  interactions.md
examples/: README.md
examples/01_document_embedding_pipeline/: README.md  main.py  requirements.txt
examples/01_mock_llm_agent/: README.md  main.py
examples/02_parallel_data_processing/: README.md  main.py
examples/02_pdf_processing_pipeline/: README.md  main.py
examples/03_data_analysis_pipeline/: README.md  main.py
examples/03_web_scraping_pipeline/: README.md  main.py
examples/04_embedding_with_batching/: main.py
examples/04_image_batch_processing/: README.md  main.py
lattice/: __init__.py  exceptions.py
lattice/api/: __init__.py  dependencies.py  exceptions.py  server.py
lattice/api/models/: __init__.py  schemas.py
lattice/api/routes/: __init__.py  langgraph.py  worker.py  workflow.py
lattice/cli/: __init__.py  cli.py
lattice/client/: __init__.py  base.py
lattice/client/core/: __init__.py  client.py  decorator.py  models.py  workflow.py
lattice/client/langgraph/: __init__.py  client.py
lattice/config/: __init__.py  batch.py  defaults.py  logging.py
lattice/core/: __init__.py
lattice/core/orchestrator/: __init__.py  orchestrator.py
lattice/core/resource/: __init__.py  manager.py  node.py
lattice/core/runtime/: __init__.py  task.py  task_reference.py  workflow.py
lattice/core/scheduler/: __init__.py  batch_collector.py  message_bus.py  scheduler.py
lattice/core/worker/: __init__.py  worker.py
lattice/core/workflow/: __init__.py  base.py
lattice/executor/: __init__.py  base.py  code_executor.py  factory.py  local_executor.py  ray_executor.py  runner.py  sandbox.py
lattice/executor/sandbox/: __init__.py  base.py  (+3 more)
lattice/llm/: __init__.py  manager.py
lattice/observability/: __init__.py  metrics.py  middleware.py
lattice/utils/: __init__.py  compat.py  gpu.py  network.py
scripts/: install-hooks.sh
scripts/git-hooks/: commit-msg  pre-commit
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_batching.py  test_client.py  test_langgraph_client.py  test_workflow_api.py
tests/unit/: test_backpressure.py
web/lattice_board/: INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json
web/lattice_playground/: README.md
(+39 files in other folders)
